# science-archive

./: .coveragerc  .docker-compose.yml.swp  .dockerignore  .gitignore  .poetry-version  .travis.yml  CHANGELOG  Dockerfile  Dockerfile.prod  Jenkinsfile  Makefile  README.md  devenv.nix  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  test_settings.py  tox.ini  travis_settings.py
.github/workflows/: build.yaml  docs-gh-pages.yaml  publish-docker.yaml
archive/: dbrouter.py  dbrouters.py  doc_examples.py  renderers.py  schema.py  settings.py  test_helpers.py  urls.py  wsgi.py
archive-deploy/: docker-compose.yml  init  local_settings.py  nginx-app.conf  supervisor-app.conf  uwsgi.ini
archive/authentication/: admin.py  apps.py  backends.py  models.py  serializers.py  test_views.py  tests.py  urls.py  views.py
archive/authentication/migrations/: 0001_initial.py  0002_alter_profile_id.py  0002_auto_20160116_0029.py  0003_remove_profile_proposals.py
archive/authentication/signals/: handlers.py
archive/frames/: __init__.py  admin.py  apps.py  exceptions.py  filters.py  forms.py  metadata.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
archive/frames/management/commands/: cacheaggregates.py  deleteframes.py  expireguideframes.py  migrate_s3.py  purgeolderframes.py  purgequicklook.py  showthrottle.py
archive/frames/migrations/: 0001_initial.py  0002_auto_20160119_2225.py  0002_auto_20160125_1735.py  0002_auto_20160229_1833.py  0002_frame_modified.py  0003_auto_20151216_2256.py  0003_auto_20160125_1749.py  0003_frame_blkuid.py  0003_remove_frame_userid.py  0004_frame_reqnum.py  0005_auto_20170406_2159.py  0006_auto_20170817_1823.py  0007_auto_20170831_2223.py  0008_auto_20190417_1715.py  0009_auto_20190807_0012.py  0010_version_migrated.py  0011_frame_day_obs.py  0012_auto_20201112_2326.py  0012_remove_version_migrated.py  0013_remove_migrated_field.py  0014_auto_20210927_0639.py  0014_auto_20220118_2242.py  0015_auto_20210927_0642.py  0015_auto_20220119_0715.py  0016_auto_20210927_2240.py  0016_auto_20220218_0815.py  0017_alter_frame_index_together.py  0018_aggregate_index.py  0019_count_estimate_func.py  0020_alter_instrument_id_and_more.py  0020_remove_frame_frames_frame_aggregate_and_more.py  0021_add_thumbnail_model.py  0021_thumbnail_remove_frame_frames_frame_aggregate_and_more.py  0022_remove_frame_frames_frame_aggregate_and_more.py
archive/frames/signals/: handlers.py
archive/frames/tests/: factories.py  frames.json  headers.json  test_views.py  tests.py
deploy/: docker-compose.yml  nginx.conf  prod-values.yaml
templates/rest_framework/: api.html
