[tool.poetry]
name = "science-archive"
version = "2.6.1"
description = ""
authors = ["Jashandeep Sohi <jsohi@lco.global>"]
readme = "README.md"
packages = [{include = "archive"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4"
psycopg2 = "~2.9"
django-filter = "^21.1"
djangorestframework = "^3.13"
PyYAML = "^6.0"
boto3 = "<2.0"
astropy = "~5.1.0"
Markdown = ">=3.0,<3.1"
gunicorn = {version = "20.1.0", extras = ["gevent"]}
django-cors-headers = ">=3.11,<4.0"
drf-yasg = "^1.21"
python3-memcached = ">=1.51,<2.0"
uritemplate = "3.0.1"
kombu = ">=4.6,<4.7"
ocs-authentication = "0.2.2"
setuptools-scm = "6.0.1"
requests = ">2.0,<3.0"
django-extensions = "^3.2.1"
lcogt-logging = "^0.3.2"
pytz = "^2022.2.1"
django-redis = "^5.2.0"
ocs-archive = "0.4.0"
urllib3 = "<2.0"
anyascii = "^0.3.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
factory-boy = "^3.2.1"
responses = "^0.21.0"
coverage = "^6.4.4"
coveralls = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
