[tool.poetry]
name = "science-archive"
version = "2.7.2"
description = ""
authors = ["Jashandeep Sohi <jsohi@lco.global>"]
readme = "README.md"
packages = [{include = "archive"}]

[tool.poetry.dependencies]
python = ">3.12,<4.0"
django = "^6"
psycopg2 = "^2.9"
django-filter = "^25.2"
djangorestframework = "^3.17"
PyYAML = "^6.0"
boto3 = "<2.0"
astropy = ">=7,<9.0"
Markdown = ">=3.0,<3.1"
gunicorn = {version = "22.0.0", extras = ["gevent"]}
django-cors-headers = "^4.9.0"
drf-yasg = "^1.21"
python3-memcached = ">=1.51,<2.0"
uritemplate = "3.0.1"
kombu = "^5.6.0"
ocs-authentication = ">=0.2.4"
setuptools-scm = "^10.0.5"
requests = "^2"
django-extensions = "^4.1"
lcogt-logging = "^0.3.2"
django-redis = "^6.0.0"
ocs_archive = ">=0.5.0"
urllib3 = "<2.0"
anyascii = "^0.3.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
factory-boy = "^3.2.1"
responses = "^0.21.0"
coverage = "^6.4.4"
coveralls = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
